# ChangeLog for dev-scheme/drscheme
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-scheme/drscheme/Attic/ChangeLog,v 1.36 2006/11/14 22:01:31 chutzpah Exp $

*drscheme-359.200 (14 Nov 2006)

  14 Nov 2006; Patrick McLean <chutzpah@gentoo.org>
  +drscheme-359.200.ebuild:
  New beta version, will keep these masked for now until 260 final comes out.

  23 Oct 2006; Patrick McLean <chutzpah@gentoo.org> drscheme-352-r2.ebuild:
  Drop monolithic X deps and update Xft dependency to >x11-libs/libXft-2.1.9
  as it won't compile against some versions below that.

  18 Oct 2006; Patrick McLean <chutzpah@gentoo.org> -drscheme-352.ebuild,
  -drscheme-352-r1.ebuild:
  Clean up some old broken versions.

*drscheme-352-r2 (17 Oct 2006)

  17 Oct 2006; Patrick McLean <chutzpah@gentoo.org> +drscheme-352-r2.ebuild:
  New revision, fixes bug #151740.

*drscheme-352-r1 (13 Oct 2006)

  13 Oct 2006; Patrick McLean <chutzpah@gentoo.org> drscheme-352.ebuild,
  +drscheme-352-r1.ebuild:
  Replace -O? with -O2, this shouuld fix #141925 and #133888.

  13 Oct 2006; Patrick McLean <chutzpah@gentoo.org>
  +files/drscheme-352-destdir.patch, drscheme-352.ebuild:
  Add patch from drscheme svn to fix weird problems with DESTDIR installs.
  Fixes bug #146748.

  07 Sep 2006; Patrick McLean <chutzpah@gentoo.org> drscheme-352.ebuild:
  Add some processing of LDFLAGS to prevent compiliation errors if the user
  has LDFLAGS set.

  29 Jul 2006; Patrick McLean <chutzpah@gentoo.org> -drscheme-351.ebuild,
  drscheme-352.ebuild:
  Remove version 351 and clean up dependencies a bit.

*drscheme-352 (28 Jul 2006)

  28 Jul 2006; Patrick McLean <chutzpah@gentoo.org> +drscheme-352.ebuild:
  Version bump.

  28 Jul 2006; Patrick McLean <chutzpah@gentoo.org> drscheme-351.ebuild:
  Fix RDEPEND's.

  27 Jul 2006; Patrick McLean <chutzpah@gentoo.org> drscheme-351.ebuild:
  Add desktop icon creation (fixes bug #38990).

*drscheme-351 (27 Jul 2006)
