@@ -1,6 +1,9 @@
 # ChangeLog for dev-scheme/drscheme
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-scheme/drscheme/Attic/ChangeLog,v 1.36 2006/11/14 22:01:31 chutzpah Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-scheme/drscheme/Attic/ChangeLog,v 1.37 2006/11/15 20:07:16 chutzpah Exp $
+
+  15 Nov 2006; Patrick McLean <chutzpah@gentoo.org> drscheme-359.200.ebuild:
+  Remove the moving of the gl collects, fixes #155262.
 
 *drscheme-359.200 (14 Nov 2006)
 
